Fixing category date icon z-index issue

--- a/admin/assets/less/ie.less
+++ b/admin/assets/less/ie.less
@@ -254,6 +254,13 @@
 		display: inline;
 		}
 	}
+
+	.mura-grid, .mura-table-grid {
+		.scheduled a i {
+					z-index: 1000;
+					zoom: 1;
+					} 
+		}
 	
 &.ie8 {
 	
@@ -266,16 +273,6 @@
 
 /*
 &.ie9 {
-	
-	.dropdown-menu li.divider { background: transparent; border-color: #666; }
-	
-	.nav-site .dropdown-menu, #newContentMenu ul {
-		background: #333;
-		}
-	
-	.mura-grid .actions {
-		padding-left: 4px !important;
-		}
 	
 }
 */
